buildscript {
    repositories {
        gradlePluginPortal()
    }

    dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
        classpath "io.spring.gradle:dependency-management-plugin:${springDependencyManagementVersion}"
        classpath "gradle.plugin.org.flywaydb:gradle-plugin-publishing:${flywayVersion}"
        classpath "gradle.plugin.com.github.spotbugs.snom:spotbugs-gradle-plugin:${spotbugsVersion}"
        classpath "io.freefair.gradle:lombok-plugin:${lombokPluginVersion}"
    }
}

configure(subprojects) {

    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'checkstyle'
    apply plugin: 'com.github.spotbugs'
    apply plugin: 'org.flywaydb.flyway'
    apply plugin: 'jacoco'
    apply plugin: 'io.freefair.lombok'

    group 'com.evernote'
    version '1.0-SNAPSHOT'

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
        }

        dependencies {
            dependency "org.mapstruct:mapstruct:${mapstructVersion}"
            dependency "org.mapstruct:mapstruct-processor:${mapstructVersion}"
            dependency "org.testcontainers:postgresql:${testContainersPostgresqlVersion}"
            dependency "org.flywaydb:flyway-core:${flywayVersion}"
            dependency "io.springfox:springfox-swagger-ui:${swaggerVersion}"
            dependency "io.springfox:springfox-swagger2:${swaggerVersion}"
            dependency "io.swagger:swagger-annotations:${swaggerAnnotationsVersion}"
            dependency "org.passay:passay:${passayVersion}"
            dependency "io.jsonwebtoken:jjwt-api:${jsonwebtokenVersion}"
            dependency "io.jsonwebtoken:jjwt-impl:${jsonwebtokenVersion}"
            dependency "io.jsonwebtoken:jjwt-jackson:${jsonwebtokenVersion}"
        }

        repositories {
            mavenCentral()
        }
    }

    checkstyle {
        toolVersion = '8.31'
    }

    spotbugs {
        excludeFilter = file('../config/spotbugs/spotbugs-exclude.xml')
    }

    jacoco {
        toolVersion = '0.8.5'
        reportsDir = file("$buildDir/jacocoReportDir")
    }

    lombok {
        config['lombok.anyConstructor.addConstructorProperties'] = 'true'
    }

    sourceCompatibility = JavaVersion.VERSION_14
    targetCompatibility = JavaVersion.VERSION_14
}
